<resources>
    <string name="app_name">Valkyrie</string>
    <string name="actionMyAccount">MY ACCOUNT</string>
    <string name="actionMyOrders">MY ORDERS</string>
    <string name="actionShare">SHARE APP</string>
    <string name="actionCall">CALL US</string>
    <string name="actionAboutUs">ABOUT US</string>
    <string name="choise_your_service">CHOISE YOUR SERVICE</string>
    <string name="shoes">Shoes</string>
    <string name="clothes">Clothes</string>
    <string name="carpets">Carpets</string>
    <string name="blankets">Blankets</string>
    <string name="curtains">Curtains</string>
    <string name="cushions">Cushions</string>
    <string name="buttonCreateAccount">Create Account</string>
    <string name="textViewOr">or</string>
    <string name="buttonSignIn">Sign In</string>
    <string name="textViewSignUpWith">Sign Up With</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="user">User Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="lost">Lost password?</string>
    <string name="registerNow">Register Now</string>
    <string name="registration">Registration</string>
    <string name="registrationDescription">Welcome to Valkyrie application.You need to register to start using the application</string>
    <string name="haveAccount">Allready have an account</string>
    <string name="signIn"><u>Sign In</u></string>
    <string name="gotoFacebook">www.facebook.com/valkyrie/laundry</string>
    <string name="gotoInstagram">www.instagram.com/valkyrie/laundry</string>
    <string name="confirmYourNumber">Confirm Your Number</string>
    <string name="number">0017</string>
    <string name="confirm">Confirm</string>
</resources>
