<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionMyAccount"
        android:orderInCategory="100"
        android:title="@string/actionMyAccount"
        android:icon="@drawable/ic_person_white_24dp"
        />
    <item
        android:id="@+id/actionMyOrders"
        android:orderInCategory="100"
        android:title="@string/actionMyOrders"
        android:icon="@drawable/ic_format_line_spacing_white_24dp"
        />
    <item
        android:id="@+id/actionShare"
        android:orderInCategory="100"
        android:title="@string/actionShare"
        android:icon="@drawable/ic_share_white_24dp"
        />
    <item
        android:id="@+id/actionCall"
        android:orderInCategory="100"
        android:title="@string/actionCall"
        android:icon="@drawable/ic_phone_in_talk_white_24dp"
        />
    <item
        android:id="@+id/actionAbout"
        android:orderInCategory="100"
        android:title="@string/actionAboutUs" />
</menu>