<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="top"
        android:contentDescription="TODO"
        android:paddingBottom="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/valkyrie" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:text="@string/confirmYourNumber"
android:gravity="center"
    android:layout_marginTop="100dp"
    />
        <EditText
            android:id="@+id/etNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:text="@string/number"
            android:gravity="center"
            android:layout_marginTop="100dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/btnConfirm"
            android:layout_marginRight="20dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/button_signin"
            android:text="@string/confirm"
            android:textColor="@color/colorToolbar"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>