<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">



    <ImageView

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="top"
        android:contentDescription="TODO"
        android:paddingBottom="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/valkyrie" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_create_account"
            android:text="@string/buttonCreateAccount"
            android:textSize="20sp"
            android:id="@+id/btnCreateAccount"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textViewOr"
            android:textSize="24sp"
            android:textStyle="italic" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/btnSignIn"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_signin"
            android:text="@string/buttonSignIn"
            android:textColor="@color/colorToolbar"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textViewSignUpWith"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:contentDescription="TODO"
            android:id="@+id/ivFacebook"
            android:src="@drawable/facebook" />

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:contentDescription="TODO"
            android:id="@+id/ivInstagram"
            android:src="@drawable/instagram" />
    </LinearLayout>
</LinearLayout>